[fix]レスポンシブ:z-indexの修正

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -134,7 +134,7 @@ header {
   width: 100%;
   height: auto;
   background-color: #000000;
-  z-index: 1;
+  z-index: 6;
   border-radius: 0 0 5px 5px;
   box-shadow: 0px 0px 8px rgba(149, 149, 149, 0.25);
   opacity: 0.9;
