--- a/app/assets/stylesheets/responsive.scss
+++ b/app/assets/stylesheets/responsive.scss
@@ -54,7 +54,7 @@
       background-color: #f0ad4e;
       border-radius: 100px;
       box-shadow: 0px 0px 8px rgba(149, 149, 149, 1);
-      z-index: 10;
+      z-index: 1;
       a {
         display: block;
         height: 100%;
@@ -320,7 +320,7 @@
     position: fixed;
     left: 30px;
     bottom: 30px;
-    z-index: 10;
+    z-index: 1;
     box-shadow: 0px 0px 8px #959595;
     select {
       margin: 0;
